data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_245.wast
;; 6. **Test 6: Loop with Test-and-Increment Logic and `nop`**:    - **Description**: A loop that uses test-and-increment logic to exit after a certain count, interspersed with `nop` instructions.    - **Constraint**: Ensures `nop` does not affect the loop counter or exit condition.    - **Relation to Infinite Loops**: Verifies that the presence of `nop` doesn’t cause infinite looping by hindering loop increment/decrement.    - **Example**: `(loop $L (nop) (local.set 0 (i32.add (local.get 0) (i32.const 1))) (br_if $L (i32.lt_s (local.get 0) (i32.const 10))))`

(assert_invalid
  (module
    (func (local i32)
      (loop $L
        (nop)
        (local.set 0 (i32.add (local.get 0) (i32.const 1)))
        (br_if $L (i32.lt_s (local.get 0) (i32.const 10)))
      )
    )
  )
  "loop never halts"
)